Add readme, update npm script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "index.js"
   ],
   "scripts": {
-    "test": "eslint index.js && ! eslint -c index.js tests/fail.js &>/dev/null && eslint -c index.js tests/pass.js && echo 'pass'",
+    "test": "eslint index.js",
     "prepare": "npm test",
     "release": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
