--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-config-stormid",
+  "name": "@stormid/eslint-config",
   "version": "1.0.0",
-  "description": "StormId eslint config",
+  "description": "Storm Id eslint config",
   "main": "index.js",
   "keywords": [
     "eslint",
